XSensor/XSNReader-20220817/XSNReader/XSNReader.h

enum EXSNPressureUnit
{
	eXSNPRESUNIT_MMHG = 0,	// millimeters of mercury
	eXSNPRESUNIT_INH2O,		// inches of water
	eXSNPRESUNIT_PSI,		// pounds/sq.inch
	eXSNPRESUNIT_KPA,		// kilopascals
	eXSNPRESUNIT_KGCM2,		// kgf/cm^2
	eXSNPRESUNIT_ATM,		// atmospheres
	eXSNPRESUNIT_NCM2,		// newtons/cm^2
	eXSNPRESUNIT_MBAR,		// millibars
	eXSNPRESUNIT_NM2,		// Newton/meter^2
	eXSNPRESUNIT_GCM2,		// grams/cm^2
	eXSNPRESUNIT_BAR,		// bar

	eXSNPRESUNIT_RAW = 255
};
// force/load units
enum EXSNForceUnit
{
	eXSNFORCEUNIT_UNKNOWN = 0,	//  raw pressure values?
	eXSNFORCEUNIT_NEWTONS = 1,	// newtons
	eXSNFORCEUNIT_KGF = 2,		// kilograms of force
	eXSNFORCEUNIT_LBF = 10,		// pound-force
};
enum EXSNReaderErrorCodes
{
	eXSN_ERRORCODE_OK,							// Function ran normally

	eXSN_ERRORCODE_LIBRARY_NOT_INITIALIZED,		// The DLL library has not been initialized

	eXSN_ERRORCODE_INVALID_XSN,					// LoadSession failed because the session is not a valid xsensor file
	eXSN_ERRORCODE_INVALID_VERSION,				// LoadSession failed because the session is a valid xsensor file, but the version is not supported.
	eXSN_ERRORCODE_UNSUPPORTED_SENSOR,			// The reader DLL does not support the sensor model found in the XSN.

	eXSN_ERRORCODE_NOSESSION,					// The operation failed because no session has been loaded.
	eXSN_ERRORCODE_EMPTYSESSION,				// The operation failed because there are no frames in this session

	eXSN_ERRORCODE_BADPARAMETER_OUTOFRANGE,		// a parameter is out of range
	eXSN_ERRORCODE_BADPARAMETER_NULL,			// null parameter - pass in a variable/buffers address

	eXSN_ERRORCODE_MEMORYALLOCATION_FAILED,		// the system seems to be running low on memory, or the DLL could not allocate some memory
};
// ===========================================================================
//	Configuration functions
// ===========================================================================

extern "C" XSNREADER_API EXSNReaderErrorCodes XSN_GetLastErrorCode();
// Retrieves the last error code.  Check this value when a function reports a failure.  (see enum EXSNErrorCodes below).


// ===========================================================================
//	Library initialization/deinitialization
// ===========================================================================

extern "C" XSNREADER_API bool XSN_InitLibrary();
// Initialize the library.  This must be the first call to the Library
// Pass in 0 or NULL to the XSN_InitLibraryEx function or just call XSN_InitLibrary()

extern "C" XSNREADER_API bool XSN_ExitLibrary();
// Uninitializes the library, freeing all allocated resources.  This should be the last call to the Library

extern "C" XSNREADER_API uint16_t XSN_GetLibraryMajorVersion();
// returns the library's major version number

extern "C" XSNREADER_API uint16_t XSN_GetLibraryMinorVersion();
// returns the library's minor version number


// ===========================================================================
// Session Initialization
// ===========================================================================

extern "C" XSNREADER_API bool XSN_LoadSessionU(const wchar_t* szSession);
// loads an xsensor data file
// Resets the pressure units to the base ones used in the session file
// Returns true (non-zero) if the load is successful

extern "C" XSNREADER_API bool XSN_CloseSession();
// unloads the current session file. Frees the file handle so the file can be accessed elsewhere.


// ===========================================================================
//	Session Configuration
// ===========================================================================

extern "C" XSNREADER_API uint32_t XSN_FrameCount();
// Returns the number of frames in the session file.

extern "C" XSNREADER_API uint8_t XSN_PadCount();
// used for C, C++ and Python
extern "C" XSNREADER_API bool XSN_GetPadInfoEx(uint8_t pad, 
	wchar_t* sModel, uint32_t& nModelLength, 
	wchar_t* sProductID, uint32_t& nProductLength, 
	wchar_t* sSerial, uint32_t& nSerialLength);
// Pass in null for the strings to retrieve the size of the buffer
// If the buffers are 0 or NULL, the length of the required buffer(in wchar_t count) is calculated
// and returned in the length parameters.

extern "C" XSNREADER_API bool XSN_GetPadSenselDims(uint8_t pad, float& widthCM, float& heightCM);
// width and height of a single cell (a sensel) in centimetres

extern "C" XSNREADER_API bool XSN_IsFootSensor(uint8_t pad, bool& bLeftSensor);
// Returns true if the pad is a foot sensor.  bLeftSensor = false when its a right foot sensor.

extern "C" XSNREADER_API uint16_t XSN_Rows(uint8_t pad);
// Returns the number of rows associated with the pad index (0 based index)

extern "C" XSNREADER_API uint16_t XSN_Columns(uint8_t pad);
// Returns the number of columns associated with the pad index (0 based index)

extern "C" XSNREADER_API EXSNPressureUnit XSN_GetPressureUnits();
// Returns the pressure unit format of the pressure values

extern "C" XSNREADER_API bool XSN_SetPressureUnits(EXSNPressureUnit eUnits);
// Sets the pressure unit format of the pressure values

extern "C" XSNREADER_API EXSNForceUnit XSN_GetForceUnits();
// Returns the load or force units that correspond to the current pressure units


extern "C" XSNREADER_API float XSN_GetMaxPressure();
// Returns the maximum pressure the file was calibrated for. (If raw, then 65534.0f)

extern "C" XSNREADER_API float XSN_GetMinPressure();
// Returns the minimum pressure the file was calibrated for. (If raw, then 0.0f)
// Values below this pressure are considered uncalibrated.

extern "C" XSNREADER_API float XSN_GetZeroThreshold();
// Retrieves any general notes set in the session (if any) (Use this for C#)

extern "C" XSNREADER_API bool XSN_GetGeneralNotesEx(wchar_t* sNotes, uint32_t& nNotesLength);
// Retrieves any notes specific to the current frame (Use this for C#)

extern "C" XSNREADER_API bool XSN_GetFrameNotesEx(wchar_t* sNotes, uint32_t& nNotesLength);
// Retrieves any notes specific to the current frame (Use this for C/Python)
// Pass in null or None for the string buffer to retrieve the length of the buffer (in wchar_t counts)


// ===========================================================================
//	Frame navigation
// ===========================================================================

extern "C" XSNREADER_API bool XSN_StepToFrame(uint32_t nFrame);
// Steps to the frame (1 based index)

extern "C" XSNREADER_API uint32_t XSN_GetFrameID();
// Retrieves the current frame ID (or zero if no frame)

extern "C" XSNREADER_API uint16_t XSN_GetSessionID();
// The start-stop session to which the current frame belongs (zero if no frame)
// Use this to detect recording gaps due to recording stoppage and restart


extern "C" XSNREADER_API bool XSN_GetTimeStampUTC(uint16_t& nYear, uint16_t& nMonth, uint16_t& nDay, uint16_t& nHour, uint16_t& nMinute, uint16_t& nSecond, uint16_t& nMilliseconds);